dark mode issue

--- a/app/internal_packages/ui-dark/styles/override-email.less
+++ b/app/internal_packages/ui-dark/styles/override-email.less
@@ -4,6 +4,7 @@
     background-color: @cards;
 }
 
+.layout-mode-popout .message-list-toolbar .item-container,
 .outbox-list .list-item .list-column-HoverActions .action,
 .thread-list .list-item .list-column-HoverActions .action,
 .button-dropdown .primary-item,
